<resources>
    <string name="app_name">TrueWord</string>
    <string name="how_to_play_btn_text">HOW TO PLAY ?</string>
    <string name="start_play_button">start Play</string>
    <string name="restart_button">Restart</string>
    <string name="score_txt">Score</string>
    <string name="correct_button_text">Correct</string>
    <string name="wrong_button_text">WRONG</string>
    <string name="play_again">Play Again</string>
    <string name="dismiss">Dismiss</string>
    <string name="how_to_play">Game Start: At the beginning of the game, a random word will be displayed on the screen, and a countdown timer will start. The duration for each word can be set to 30 seconds, for example.

Word Selection: You will have two options displayed on the screen for each word: "Correct" and "Wrong." If the word displayed is correct, you should tap the "Correct" button; if it\'s wrong, you should tap the "Wrong" button.

Scoring: For each correct selection, your "Correct Count" score will increase, and it will be shown on the screen. If you make a wrong selection, your "Wrong Count" score will increase, and it will also be displayed.

Time Limit: The game will end when the time runs out or when you have seen all the words.

Restarting the Game: After the game ends, you can click the "Restart" button to start a new game. This will reset your scores, and a new game will begin.

Game Over: At the end of the game, a pop-up will appear on the screen displaying the result of your game. It will show the number of correct and wrong answers you provided.</string>
    <string name="word">WORD</string>
    <string name="true_word">TRUE</string>
</resources>