<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191b20"
    tools:context=".WordActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer_textview"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/unanswered_button_text"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#e1e078"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toStartOf="@+id/restart_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#00000000"
        android:text="@string/restart_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <TextView
        android:id="@+id/word_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#fe4c01"
        app:layout_constraintBottom_toTopOf="@+id/score_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_textview" />


    <TextView
        android:id="@+id/score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/score_txt"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#707374"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/correct_button"
        app:layout_constraintEnd_toEndOf="@+id/score_textview"
        app:layout_constraintStart_toStartOf="@+id/score_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/correct_button"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/unanswered_button_text"
        android:fontFamily="sans-serif-medium"
        android:text="@string/correct_button_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/wrong_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/wrong_button"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/unanswered_button_text"
        android:fontFamily="sans-serif-medium"
        android:text="@string/wrong_button_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:elevation="0dp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/correct_button"
        app:layout_constraintStart_toStartOf="@+id/correct_button" />

</androidx.constraintlayout.widget.ConstraintLayout>